--- a/web/angular-wallet/src/app/layout/components/mining-calc-commitment/mining-calc-commitment.component.html
+++ b/web/angular-wallet/src/app/layout/components/mining-calc-commitment/mining-calc-commitment.component.html
@@ -4,4 +4,4 @@
     </div>
 </div>
 
-<ng5-slider #slider [(value)]="commit" [options]="options"></ng5-slider>
+<ngx-slider #slider [(value)]="commit" [options]="options"></ngx-slider>
