--- a/web/angular-wallet/src/app/layout/components/mining-calc-commitment/mining-calc-commitment.component.scss
+++ b/web/angular-wallet/src/app/layout/components/mining-calc-commitment/mining-calc-commitment.component.scss
@@ -17,7 +17,7 @@
         }
     }
      ::ng-deep {
-        .ng5-slider .ng5-slider-pointer {
+        .ngx-slider .ngx-slider-pointer {
             background-color: rgb(3 155 229);
             width: 24px;
             height: 24px;
