--- a/web/angular-wallet/src/app/layout/components/mining-calc-plot-size/mining-calc-plot-size.component.html
+++ b/web/angular-wallet/src/app/layout/components/mining-calc-plot-size/mining-calc-plot-size.component.html
@@ -6,4 +6,4 @@
 
 </div>
 
-<ng5-slider #slider [(value)]="plot" [options]="options"></ng5-slider>
+<ngx-slider #slider [(value)]="plot" [options]="options"></ngx-slider>
