--- a/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
+++ b/web/angular-wallet/src/app/disclaimer/disclaimer.component.html
@@ -6,7 +6,7 @@
       <div id="disclaimer-form" [@animate]="{value:'*',params:{duration:'300ms',y:'100px'}}">
 
           <div class="logo">
-              <img src="assets/images/logos/logo_blue.png">
+              <img src="assets/images/logos/logo_blue.svg">
           </div>
 
           <div class="title">Disclaimer</div>
