--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
   <div class="logo">
-    <img src="assets/images/logos/logo_white.png" class="logo-unfolded">
-    <img src="assets/images/logos/icon_white.png" class="logo-folded">
-    <small class="logo-unfolded">{{getVersion()}}</small>
+    <img src="assets/images/logos/logo_white.svg" class="logo-unfolded">
+    <img src="assets/images/logos/icon_white.svg" class="logo-folded">
+    <small id="version" class="logo-unfolded">{{getVersion()}}</small>
   </div>
 
   <div class="buttons">
