--- a/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-row-value-cell/block-row-value-cell.component.html
@@ -3,7 +3,7 @@
   <div *ngSwitchCase="'Message'">{{value.data.message}}</div>
 
   <div *ngSwitchCase="'AccountAddress'">
-    <a [routerLink]="['/account', convertAddressToNumericId(value.data)]">{{value.data}}</a>
+    <a [routerLink]="['/account', getNumericId(value.data)]">{{value.data}}</a>
   </div>
 
   <div *ngSwitchCase="'AccountId'">
