--- a/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-chart/balance-chart.component.html
@@ -3,7 +3,7 @@
     <div class="h-256 pb-16 blue-600">
       <div class="pl-16 balance-info">
         <div class="inline responsive">
-          <h1 class="pr-8 mb-0">{{accountBalances.totalBalance.getBurst() | burstAmount:'burst'}}</h1>
+          <h1 class="pr-8 mb-0">{{accountBalances.totalBalance.getSigna() | burstAmount}}</h1>
           <div class="inline">
             <small class="font-size-14 pr-8">{{calculateValue(priceBtc) | currency:'฿'}}</small>
             <small class="font-size-14 pr-8">{{calculateValue(priceUsd) | currency:'USD'}}</small>
@@ -12,9 +12,9 @@
         </div>
         <div class="inline responsive">
           <small class="font-size-14 pr-8">{{"balance_available"| i18n}}
-            : {{accountBalances.availableBalance.getBurst() | burstAmount:'burst'}}</small>
+            : {{accountBalances.availableBalance.getSigna() | burstAmount}}</small>
           <small class="font-size-14">{{"balance_locked"| i18n}}
-            : {{accountBalances.lockedBalance.getBurst() | burstAmount:'burst'}}</small>
+            : {{accountBalances.lockedBalance.getSigna() | burstAmount}}</small>
         </div>
       </div>
       <div *ngIf="account.transactions.length">
