--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -63,7 +63,7 @@
     <label>{{'recipients' | i18n}}</label>
     <div class="chip-list">
       <span *ngFor="let accountId of value.data.recipients" class="chip">
-        <a [routerLink]="['/account', accountId]">{{convertNumericIdToAddress(accountId)}}</a>
+        <a [routerLink]="['/account', accountId]">{{getReedSolomonAddress(accountId)}}</a>
       </span>
     </div>
   </div>
@@ -72,7 +72,7 @@
     <label>{{'payments' | i18n}}</label>
     <div class="chip-list">
       <span *ngFor="let payment of value.data.recipients" class="chip">
-        <a [routerLink]="['/account', payment[0]]">{{convertNumericIdToAddress(payment[0])}}
+        <a [routerLink]="['/account', payment[0]]">{{getReedSolomonAddress(payment[0])}}
           ({{payment[1] | burstAmount:'planck':true}})</a>
       </span>
     </div>
