chore: renaming @burstjs

--- a/lib/packages/monitor/README.md.hbs
+++ b/lib/packages/monitor/README.md.hbs
@@ -1,4 +1,4 @@
-# @burstjs/monitor
+# @signumjs/monitor
 
 A monitor to watch for specific changes on the the Burst blockchain
 
@@ -7,20 +7,20 @@ to watch for such changes and waiting for confirmation. This package simplifies 
 
 ## Installation
 
-`@burstjs/monitor` can be used with NodeJS or Web. Two formats are available
+`@signumjs/monitor` can be used with NodeJS or Web. Two formats are available
 
 ### Using with NodeJS and/or modern web frameworks
 
 Install using [npm](https://www.npmjs.org/):
 
 ```
-npm install @burstjs/monitor
+npm install @signumjs/monitor
 ```
 
 or using [yarn](https://yarnpkg.com/):
 
 ``` yarn
-yarn add @burstjs/monitor
+yarn add @signumjs/monitor
 ```
 
 #### Example
@@ -28,8 +28,8 @@ yarn add @burstjs/monitor
 // TODO:
 
 ```js
-import {Monitor} from '@burstjs/monitor'
-import {composeApi} from "@burstjs/core";
+import {Monitor} from '@signumjs/monitor'
+import {composeApi} from "@signumjs/core";
 
 // A method that checks if an account exists
 // > IMPORTANT: Do not use closures, when you need to serialize the monitor
@@ -81,7 +81,7 @@ This might be useful for Wordpress and/or other PHP applications.
 
 Just import the package using the HTML `<script>` tag.
 
-`<script src='https://cdn.jsdelivr.net/npm/@burstjs/monitor/dist/burstjs.monitor.min.js'></script>`
+`<script src='https://cdn.jsdelivr.net/npm/@signumjs/monitor/dist/burstjs.monitor.min.js'></script>`
 
 #### Example
 
@@ -97,7 +97,7 @@ monitor.onFulFilled(() => {
 
 See more here:
 
-[@burstjs/monitor Online Documentation](https://burst-apps-team.github.io/phoenix/modules/monitor.html)
+[@signumjs/monitor Online Documentation](https://burst-apps-team.github.io/phoenix/modules/monitor.html)
 
 ---
 
