--- a/lib/packages/core/README.md.hbs
+++ b/lib/packages/core/README.md.hbs
@@ -1,4 +1,4 @@
-# @burstjs/core
+# @signumjs/core
 
 Burst-related functions and models for building Burstcoin applications.
 
@@ -11,20 +11,20 @@ burstJS can be used with NodeJS or Web. Two formats are available
 Install using [npm](https://www.npmjs.org/):
 
 ```
-npm install @burstjs/core
+npm install @signumjs/core
 ```
 
 or using [yarn](https://yarnpkg.com/):
 
 ```
-yarn add @burstjs/core
+yarn add @signumjs/core
 ```
 
 #### Example
 
 ```js
-import {composeApi, ApiSettings} from '@burstjs/core'
-import {BurstValue} from '@burstjs/util'
+import {composeApi, ApiSettings} from '@signumjs/core'
+import {BurstValue} from '@signumjs/util'
 
 const apiSettings = new ApiSettings('https://testnet.burstcoin.network:6876');
 const api = composeApi(apiSettings);
@@ -36,7 +36,7 @@ try{
 const {balanceNQT} = await api.account.getAccountBalance('13036514135565182944')
 console.log(`Account Balance: ${BurstValue.fromPlanck(balanceNQT).toString()}`)
 }
-catch(e){ // e is of type HttpError (as part of @burstjs/http)
+catch(e){ // e is of type HttpError (as part of @signumjs/http)
 console.error(`Whooops, something went wrong: ${e.message}`)
 }
 })()
@@ -51,7 +51,7 @@ This might be useful for Wordpress and/or other PHP applications.
 
 Just import the package using the HTML `<script>` tag.
 
-`<script src='https://cdn.jsdelivr.net/npm/@burstjs/core/dist/burstjs.min.js'></script>`
+`<script src='https://cdn.jsdelivr.net/npm/@signumjs/core/dist/burstjs.min.js'></script>`
 
 
 #### Example
@@ -67,7 +67,7 @@ api.network.getBlockchainStatus().then(console.log).catch(console.error);
 
 See more here:
 
-[@burstjs/core Online Documentation](https://burst-apps-team.github.io/phoenix/modules/core.html)
+[@signumjs/core Online Documentation](https://burst-apps-team.github.io/phoenix/modules/core.html)
 
 ---
 
