--- a/lib/packages/core/README.md.hbs
+++ b/lib/packages/core/README.md.hbs
@@ -1,10 +1,10 @@
 # @signumjs/core
 
-Burst-related functions and models for building Burstcoin applications.
+Burst-related functions and models for building Signum blockchain applications.
 
 ## Installation
 
-burstJS can be used with NodeJS or Web. Two formats are available
+SignumJS can be used with NodeJS or Web. Two formats are available
 
 ### Using with NodeJS and/or modern web frameworks
 
@@ -24,21 +24,21 @@ yarn add @signumjs/core
 
 ```js
 import {composeApi, ApiSettings} from '@signumjs/core'
-import {BurstValue} from '@signumjs/util'
+import {Amount} from '@signumjs/util'
 
-const apiSettings = new ApiSettings('https://testnet.burstcoin.network:6876');
+const apiSettings = new ApiSettings('https://testnet.signum.network:6876');
 const api = composeApi(apiSettings);
 
 // this self-executing file makes turns this file into a starting point of your app
 
 (async () => {
-try{
-const {balanceNQT} = await api.account.getAccountBalance('13036514135565182944')
-console.log(`Account Balance: ${BurstValue.fromPlanck(balanceNQT).toString()}`)
-}
-catch(e){ // e is of type HttpError (as part of @signumjs/http)
-console.error(`Whooops, something went wrong: ${e.message}`)
-}
+    try{
+        const {balanceNQT} = await api.account.getAccountBalance('13036514135565182944')
+        console.log(`Account Balance: ${Amount.fromPlanck(balanceNQT).toString()}`)
+    }
+        catch(e){ // e is of type HttpError (as part of @signumjs/http)
+        console.error(`Whooops, something went wrong: ${e.message}`)
+    }
 })()
 ```
 
@@ -51,16 +51,15 @@ This might be useful for Wordpress and/or other PHP applications.
 
 Just import the package using the HTML `<script>` tag.
 
-`<script src='https://cdn.jsdelivr.net/npm/@signumjs/core/dist/burstjs.min.js'></script>`
+`<script src='https://cdn.jsdelivr.net/npm/@signumjs/core/dist/signumjs.min.js'></script>`
 
 
 #### Example
 
 ```js
 (function(){
-const api = b$.composeApi({nodeHost: "https://testnet.burstcoin.network:6876"});
-
-api.network.getBlockchainStatus().then(console.log).catch(console.error);
+    const api = sig$.composeApi({nodeHost: "https://testnet.burstcoin.network:6876"});
+    api.network.getBlockchainStatus().then(console.log).catch(console.error);
 })()
 ```
 
