--- a/lib/packages/http/README.md.hbs
+++ b/lib/packages/http/README.md.hbs
@@ -1,6 +1,6 @@
 # @signumjs/http
 
-Generic HTTP client that is used as a network provider for @burst/core.
+Generic HTTP client that is used as a network provider for @signumjs/core.
 
 ## Installation
 
@@ -25,31 +25,33 @@ yarn add @signumjs/http
 ```js
 import {HttpImpl} from '@signumjs/http'
 
-try{
-    const client = new HttpImpl('https://jsonplaceholder.typicode.com/');
-    const response = client.get('/todos/1')
-    console.log(response)
+async function getTodos() {
+    try{
+        const client = new HttpClientFactory.createHttpClient('https://jsonplaceholder.typicode.com/');
+        const result = await client.get('/todos/1')
+        console.log(result)
+    }
+    catch(httpError){
+        console.error(httpError.message)
+    }
 }
-catch(httpError){
-    console.error(httpError.message)
-}
-
 ```
 
 ### Using in classic `<script>`
 
-Each package is available as bundled standalone library using IIFE.
-This way _burstJS_ can be used also within `<script>`-Tags.
+Each package is available as bundled standalone library using UMD.
+This way _signumJS_ can be used also within `<script>`-Tags.
 This might be useful for Wordpress and/or other PHP applications.
 
 Just import the package using the HTML `<script>` tag.
 
-`<script src='https://cdn.jsdelivr.net/npm/@signumjs/http/dist/burstjs.http.min.js'></script>`
+`<script src='https://cdn.jsdelivr.net/npm/@signumjs/http/dist/signumjs.http.min.js'></script>`
 
 #### Example
 
 ```js
-const client = new b$http.HttpImpl('https://jsonplaceholder.typicode.com/');
+const {HttpClientFactory} = sig$http
+const client = new HttpClientFactory.createHttpClient('https://jsonplaceholder.typicode.com/');
 client.get('/todos/1').then(console.log)
 ```
 
