--- a/lib/packages/util/README.md.hbs
+++ b/lib/packages/util/README.md.hbs
@@ -1,10 +1,10 @@
 # @signumjs/util
 
-Useful utilities and tools for building Burstcoin applications
+Useful utilities and tools for building Signum blockchain applications
 
 ## Installation
 
-`@signumjs/http` can be used with NodeJS or Web. Two formats are available
+`@signumjs/util` can be used with NodeJS or Web. Two formats are available
 
 ### Using with NodeJS and/or modern web frameworks
 
@@ -23,27 +23,28 @@ yarn add @signumjs/util
 #### Example
 
 ```js
-import {convertNumberToNQTString} from '@signumjs/util'
+import {Amount} from '@signumjs/util'
 
-const value = convertNumberToNQTString(1000)
-console.log(value)
+const value = Amount.fromSigna(1000)
+console.log(value.toString())
 ```
 
 ### Using in classic `<script>`
 
-Each package is available as bundled standalone library using IIFE.
-This way _burstJS_ can be used also within `<script>`-Tags.
+Each package is available as bundled standalone library using UMD.
+This way _signumJS_ can be used also within `<script>`-Tags.
 This might be useful for Wordpress and/or other PHP applications.
 
 Just import the package using the HTML `<script>` tag.
 
-`<script src='https://cdn.jsdelivr.net/npm/@signumjs/util/dist/util.crypto.min.js'></script>`
+`<script src='https://cdn.jsdelivr.net/npm/@signumjs/util/dist/signumjs.util.min.js'></script>`
 
 #### Example
 
 ```js
-const value = b$util.convertNumberToNQTString(1000)
-console.log(value)
+const {Amount} = sig$util
+const value = Amount.fromSigna(1000)
+console.log(value.toString())
 ```
 
 See more here:
