--- a/web/angular-wallet/src/app/setup/account/account.component.html
+++ b/web/angular-wallet/src/app/setup/account/account.component.html
@@ -3,7 +3,7 @@
   <mat-grid-tile>
     <mat-card>
       <h3><a routerLink="active"><i class="fa fa-lg fa-fw fa-exchange"></i> Create Active Account</a></h3>
-      <strong>Active accounts</strong> are used for making BURST transactions. Requires user generate a
+      <strong>Active accounts</strong> are used for making transactions. Requires user generate a
       passphrase or provide one. Requires a user create a PIN for transactions.
       The passphrase is only used once locally to encrypt your private key; it is not stored anywhere.
     </mat-card>
