fix: new font, i18n improvements

--- a/web/angular-wallet/src/@fuse/scss/partials/_typography.scss
+++ b/web/angular-wallet/src/@fuse/scss/partials/_typography.scss
@@ -41,7 +41,7 @@
 // -----------------------------------------------------------------------------------------------------
 html {
     font-size: 62.5%;
-    font-family: 'Muli', 'Helvetica Neue', 'Arial', sans-serif;
+    font-family: 'Montserrat', 'Helvetica Neue', 'Arial', sans-serif;
     line-height: 1.4 !important;
     letter-spacing: -0.1px !important;
 }
