--- a/web/angular-wallet/src/app/app.theme.scss
+++ b/web/angular-wallet/src/app/app.theme.scss
@@ -63,7 +63,7 @@ $custom_palettes: (
 
 // Force the input field font sizes to 16px
 $typography: mat-typography-config(
-    $font-family: 'Muli, Helvetica Neue, Arial, sans-serif',
+    $font-family: 'Montserrat, Helvetica Neue, Arial, sans-serif',
     $title: mat-typography-level(20px, 32px, 600),
     $body-2: mat-typography-level(14px, 24px, 600),
     $button: mat-typography-level(14px, 14px, 600),
