--- a/web/angular-wallet/src/app/login/login.component.html
+++ b/web/angular-wallet/src/app/login/login.component.html
@@ -2,9 +2,9 @@
 <div class="login__panel">
     <div class="login__header">
       <a [routerLink]="[ '' ]">
-        <img alt="Burst logo" class="login__logo" src="assets/images/logos/logo_blue.png"/>
+        <img alt="Burst logo" class="login__logo" src="assets/images/logos/signum_logo_black.svg"/>
       </a>
-      <small class="login__version">"Phoenix" Wallet ({{version}})</small>
+      <small class="login__version">Phoenix Wallet Version {{version}}</small>
     </div>
     <div class="login__body">
       <h1 class="login__title">{{ 'get_burst_account' | i18n }}</h1>
