--- a/web/angular-wallet/src/app/login/login.component.scss
+++ b/web/angular-wallet/src/app/login/login.component.scss
@@ -48,7 +48,8 @@ $text-alt-color: #b3b3b3;
   &__version {
     display: block;
     text-align: center;
-    padding-left: 45px;
+    margin-top: 1rem;
+    //padding-left: 45px;
   }
 
   &__body {
