fix: CSV import - fixes #1477

--- a/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.scss
+++ b/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.scss
@@ -5,6 +5,12 @@
   align-items: center;
   flex-flow: column;
 
+  .help {
+    display: flex;
+    align-items: baseline;
+    flex-direction: row;
+  }
+
   .right {
     align-content: center;
     justify-content: flex-end;
