feat: added more nodes, introduced testnode selector

--- a/web/angular-wallet/src/app/main/settings/settings.component.html
+++ b/web/angular-wallet/src/app/main/settings/settings.component.html
@@ -73,6 +73,7 @@
           </mat-autocomplete>
         </mat-form-field>
 
+        <mat-checkbox [formControl]="showTestnet" name="showTestnet">{{ "show_testnet_nodes" | i18n }}</mat-checkbox>
 
         <div class="button-wrapper">
           <ul class="unfeatures">
