wip: fixed account adjustment stuff

--- a/web/angular-wallet/src/app/setup/account/create-active/activate/activate.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/activate/activate.component.html
@@ -13,7 +13,7 @@
     </mat-chip-list>
   </div>
   <mat-form-field class="passphrase-input">
-    <input matInput placeholder="{{'click_words' | i18n}}" readonly [ngModel]="passphrase">
+    <input matInput placeholder="{{'click_words' | i18n}}" readonly [ngModel]="passphrase" type="password">
   </mat-form-field>
 </div>
 <small>
