--- a/web/angular-wallet/src/app/main/request-burst/request-burst.component.scss
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst.component.scss
@@ -6,3 +6,10 @@ mat-form-field {
 form {
     margin:20px 0;
 }
+
+.submit-qr {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
