fix: hashicon for account info, minor improvements

--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -22,8 +22,8 @@
   <div class=" p-24">
 
     <div class="row account-details">
-      <div class="qr">
-        <img [src]="accountQRCodeURL | async | addNodeUrl" />
+      <div class="hashicon">
+        <canvas #avatar></canvas>
       </div>
       <div class="details">
         <h2>{{ account.name || account.accountRS }}</h2>
