--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.scss
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.scss
@@ -1,44 +1,46 @@
 
 table {
-    margin-top:10px;
+  margin-top: 10px;
 }
 
 th, td {
-    padding:5px;
-    text-align: left;
-    border-bottom:1px solid #efefef;
-    word-break: break-word;
-    min-width: 200px;
+  padding: 5px;
+  text-align: left;
+  border-bottom: 1px solid #efefef;
+  word-break: break-word;
+  min-width: 200px;
 }
 
 
 h2 button {
-    padding: 0;
-    min-width:35px;
-}
-h2 mat-icon {
-    font-size:19px;
+  padding: 0;
+  min-width: 35px;
 }
 
-.qr {
-    min-width:170px;
-    img {
-        margin:0 20px 20px 0;
-        box-shadow: 0 1px 3px rgba(0,0,0,.5);
-        width:150px;
-    }
+h2 mat-icon {
+  font-size: 19px;
+}
+
+.hashicon {
+  padding: 20px;
+  width: 140px;
+  height: 140px;
+  filter: drop-shadow(2px 4px 6px black);
 }
 
 .account-details {
-  display:flex;
+  display: flex;
+
   h2 {
-      margin-top:20px;
+    margin-top: 20px;
   }
+
   h3 button {
-      padding: 0;
-      min-width:35px;
+    padding: 0;
+    min-width: 35px;
   }
+
   h3 mat-icon {
-      font-size:19px;
+    font-size: 19px;
   }
 }
