--- a/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
+++ b/web/angular-wallet/src/app/main/set-account-info/set-account-info.component.html
@@ -9,28 +9,43 @@
   <div class="p-24">
     <form (ngSubmit)="onSubmit($event);" #setAccountInfoForm="ngForm">
       <mat-form-field>
-        <input matInput [(ngModel)]="name" name="name" placeholder="{{ 'your_name' | i18n }}">
+        <input matInput
+               name="name"
+               placeholder="{{ 'name' | i18n }}"
+               [(ngModel)]="name"
+               [disabled]="immutable"
+        >
       </mat-form-field>
 
       <mat-form-field>
-        <textarea matInput [(ngModel)]="description" name="description"
-                  placeholder="{{ 'description' | i18n }}"></textarea>
+        <textarea matInput
+                  name="description"
+                  placeholder="{{ 'description' | i18n }}"
+                  [(ngModel)]="description"
+                  [disabled]="immutable"
+        >
+        </textarea>
       </mat-form-field>
 
-      <burst-fee-selector [fees]="fees" [(fee)]="fee"></burst-fee-selector>
+      <ng-container *ngIf="!immutable">
 
-      <div *ngIf="advanced">
-        <mat-form-field>
-          <label>{{ 'deadline_hours' | i18n }}</label>
-          <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
-        </mat-form-field>
-      </div>
+        <burst-fee-selector [fees]="fees" [(fee)]="fee"></burst-fee-selector>
 
-      <app-submit-transaction [disabled]="!canSubmit()"
-                              [isSubmitting]="isSending"
-                              (pinChange)="setPin($event)"></app-submit-transaction>
+        <div *ngIf="advanced">
+          <mat-form-field>
+            <label>{{ 'deadline_hours' | i18n }}</label>
+            <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
+          </mat-form-field>
+        </div>
+
+        <app-submit-transaction [disabled]="!canSubmit()"
+                                [isSubmitting]="isSending"
+                                (pinChange)="setPin($event)"></app-submit-transaction>
+      </ng-container>
     </form>
 
-    <a (click)="advanced=!advanced"><em>{{ advanced ? "basic" : "advanced" | i18n }}</em></a>
+    <a *ngIf="!immutable" (click)="advanced=!advanced">
+      <em>{{ advanced ? "basic" : "advanced" | i18n }}</em>
+    </a>
   </div>
 </app-page>
