fix: removed unused icons - fixed #1483

--- a/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
+++ b/web/angular-wallet/src/app/layout/components/toolbar/toolbar.component.html
@@ -15,7 +15,7 @@
 
             <div fxLayout="row" fxLayoutAlign="start center" *ngIf="horizontalNavbar">
                 <div class="logo ml-16">
-                    <img class="logo-icon" src="assets/images/logos/icon_white.png">
+                    <img class="logo-icon" src="assets/images/logos/icon_white.svg">
                 </div>
             </div>
 
